@@ -6,16 +6,16 @@
 #define	USED
 #endif
 #ifdef	NEQN
-static const char sccsid[] USED = "@(#)/usr/ucb/neqn.sl	5.3 (gritter) 10/30/05";
+static const char sccsid[] USED = "@(#)/usr/ucb/neqn.sl	5.4 (gritter) 11/6/05";
 #else
-static const char sccsid[] USED = "@(#)/usr/ucb/eqn.sl	5.3 (gritter) 10/30/05";
+static const char sccsid[] USED = "@(#)/usr/ucb/eqn.sl	5.4 (gritter) 11/6/05";
 #endif
 /* SLIST */
 /*
 diacrit.c: * Sccsid @(#)diacrit.c	1.4 (gritter) 10/29/05
-e.h: * Sccsid @(#)e.h	1.7 (gritter) 10/30/05
+e.h: * Sccsid @(#)e.h	1.8 (gritter) 11/6/05
 e.y: * Sccsid @(#)e.y	1.5 (gritter) 8/13/05
-eqnbox.c: * Sccsid @(#)eqnbox.c	1.4 (gritter) 10/29/05
+eqnbox.c: * Sccsid @(#)eqnbox.c	1.5 (gritter) 11/6/05
 font.c: * Sccsid @(#)font.c	1.4 (gritter) 10/29/05
 fromto.c: * Sccsid @(#)fromto.c	1.4 (gritter) 10/29/05
 funny.c: * Sccsid @(#)funny.c	1.5 (gritter) 10/29/05
@@ -33,5 +33,5 @@ pile.c: * Sccsid @(#)pile.c	1.4 (gritter) 10/29/05
 shift.c: * Sccsid @(#)shift.c	1.4 (gritter) 10/29/05
 size.c: * Sccsid @(#)size.c	1.4 (gritter) 10/29/05
 sqrt.c: * Sccsid @(#)sqrt.c	1.4 (gritter) 10/29/05
-text.c: * Sccsid @(#)text.c	1.6 (gritter) 10/29/05
+text.c: * Sccsid @(#)text.c	1.7 (gritter) 11/6/05
 */
